--- a/package.json
+++ b/package.json
@@ -32,12 +32,13 @@
     "axios": "^1.7.9",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "date-fns": "^4.1.0",
+    "date-fns": "^3.6.0",
     "lucide-react": "^0.469.0",
     "motion": "^11.15.0",
     "next": "^14.2.21",
     "next-themes": "^0.4.4",
     "react": "^18",
+    "react-day-picker": "^8.10.1",
     "react-dom": "^18",
     "react-hook-form": "^7.54.2",
     "react-hot-toast": "^2.5.1",
