--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "zod": "^3.24.1"
   },
   "devDependencies": {
+    "@types/react": "19.0.3",
     "eslint": "^8",
     "eslint-config-next": "14.2.21",
     "postcss": "^8",
