--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "react-dom": "^18",
     "react-hook-form": "^7.54.2",
     "react-hot-toast": "^2.5.1",
+    "recharts": "^2.15.0",
     "sharp": "^0.33.5",
     "stripe": "^17.5.0",
     "sweetalert2": "^11.6.13",
@@ -53,7 +54,6 @@
     "zod": "^3.24.1"
   },
   "devDependencies": {
-    "@types/react": "19.0.3",
     "eslint": "^8",
     "eslint-config-next": "14.2.21",
     "postcss": "^8",
