--- a/package.json
+++ b/package.json
@@ -44,6 +44,8 @@
     "react-hot-toast": "^2.5.1",
     "recharts": "^2.15.0",
     "sharp": "^0.33.5",
+    "socket.io": "^4.8.1",
+    "socket.io-client": "^4.8.1",
     "sweetalert2": "^11.6.13",
     "swiper": "^11.1.15",
     "swr": "^2.3.0",
